# jellytools

./: .gitignore  LICENSE  README.md  config.py.example  plexyfin.py.bak  pyproject.toml
jellytools/: __init__.py
jellytools/animations/: __init__.py  base.py  cascade.py  explode.py  grid.py  kaleidoscope.py  mosaic.py  shockwave.py  spiral.py  vortex.py  waterfall.py
jellytools/api/: __init__.py  jellyfin.py
jellytools/cli/: __init__.py  commands.py  syncing.py
jellytools/core/: __init__.py  config.py  server.py  utils.py
scripts/: jellytools
