[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jellytools"
version = "0.1.0"
description = "Tools for working with Jellyfin media servers including library card generation"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "requests",
    "pygame",
    "opencv-python",
    "plexapi",
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[project.scripts]
jellytools = "jellytools.cli.commands:generate_cli"

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = 88

[tool.setuptools]
packages = ["jellytools"]
